# ticketlord

./: .gitignore  README.md  pyproject.toml  ticketlord-psdktm.desktop  ticketlord.py  ticketlord_android.py  ticketlord_web.py  universal_unpinner.js
