[tool.poetry]
name = "ticketlord"
version = "0.1.0"
description = "Display Ticketmaster tickets from your account"
authors = ["Radian LLC <contact+ticketlord@radian.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mintotp = "^0.3.0"
xdg-base-dirs = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
