[tool.poetry]
name = "ticketlord"
version = "0.1.0"
description = "Display Ticketmaster tickets from your account"
authors = ["Radian LLC <contact+ticketlord@radian.codes>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mintotp = "^0.3.0"
xdg-base-dirs = "^6.0.1"
undetected-chromedriver = "^3.5.3"
selenium = "<4.13.0"
python-dotenv = "^1.0.0"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
